# lite-ssm

./: .gitignore  CMakeLists.txt  README.md  VALIDATION.md
apps/: lite_ssm_cli.cpp
cmake/: FindMetal.cmake
docs/: architecture.md  ssm_format.md
examples/: benchmark_litessm.cpp  benchmark_pytorch.py  quality_parity.py  quality_parity_7b.py  run_benchmark.sh
include/lite_ssm/: allocator.hpp  inference.hpp  model.hpp  ops.hpp  sampler.hpp  ssm_format.hpp  state.hpp  tensor.hpp  tokenizer.hpp
include/lite_ssm/detail/: metal_backend.hpp
shaders/: activations.metal  common.metal  conv1d.metal  fused.metal  linear.metal  norm.metal  ssd_chunked.metal  ssd_step.metal
src/backend/metal/: kernel_registry.mm  metal_buffer.mm  metal_context.mm  ops.mm
src/core/: allocator.cpp  ssm_loader.cpp  tensor.cpp  tokenizer.cpp
src/model/: mamba2_block.cpp  mamba2_model.cpp  state.cpp
src/runtime/: inference.cpp  sampler.cpp
tests/: test_metal_ops.cpp  test_mmap_loader.cpp  test_ssd_parity.cpp  test_tensor.cpp  test_tokenizer.cpp
tests/stress/: test_concurrency.cpp  test_memory_bleed.cpp
tools/: dump_parity.py  export_mamba2.py  export_mamba2_8b.py  export_tokenizer.py  requirements.txt  run_validation_suite.sh  ssm_format.py  verify_export.py
